--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,7 @@
 
   <footer class="box has-text-centered" style="margin-top:10px;">
     <section style="font-size:10px;">
-      &copy; 2018 <a href="https://www.linkedin.com/in/alessandro-argentieri-92460541/">Alessandro Argentieri </a>
-      e-mail: <a href="mailto:alessandroargentieri@libero.it">
-      alessandroargentieri@libero.it</a>
+      Khiem
     </section>
   </footer>
 
